fix(LeaderboardHeader): align header width with table

--- a/frontend/src/Components/Pages/Leaderboards/LeaderBoard/LeaderBoard.module.scss
+++ b/frontend/src/Components/Pages/Leaderboards/LeaderBoard/LeaderBoard.module.scss
@@ -4,7 +4,7 @@
   width: 100%;
   min-height: 661.6px;
   margin: 30px 0 40px;
-  padding: 1.5rem;
+  padding: 24px;
   padding-top: 0;
   border-radius: 16px;
   background-color: #0e1217;
@@ -34,7 +34,7 @@
 @media (max-width: 1300px) {
   .leaderboardWrapper {
     background-color: transparent;
-    padding: 1.5rem 0;
+    padding: 24px 0;
     border: none;
 
     &:hover {
@@ -95,6 +95,10 @@
     background-color: #1d222f;
     gap: 10px;
     border-radius: 10px;
+
+    &:first-child {
+      margin-top: 30px;
+    }
   }
 }
 
